# mosaico

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/mosaico/: __init__.py  cli.py  cropper.py  explain.py  gen.py  render.py  schema.py  state.py
tests/: test_cropper.py  test_explain.py  test_gen.py  test_integration.py  test_render.py  test_schema.py  test_smoke.py  test_state.py
