[project]
name = "mosaico"
version = "0.4.0"
description = "Declarative image-project renderer — YAML -> topo-sorted, cached, idempotent batch image generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alejandro Piad Morffis", email = "alepiad@gmail.com" },
]
keywords = ["cli", "image", "openrouter", "render", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "microcli-toolkit>=0.4",
    "pillow>=10.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mosaico = "mosaico.cli:main"

[project.urls]
Homepage = "https://github.com/apiad/mosaico"
Repository = "https://github.com/apiad/mosaico"
Issues = "https://github.com/apiad/mosaico/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaico"]

[tool.uv.sources]
microcli-toolkit = { path = "../microcli", editable = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
